--- a/people.Rmd
+++ b/people.Rmd
@@ -7,7 +7,7 @@ title: "People"
 ## Nojin Kwak (co-director)
 <img src="files/Kwak.png" style="width:30%; border:5px solid">
 
-Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo. In addition to his appointment in the Department of Communication, he currently serves as vice provost for international education. Kwak’s research centers on the role of communication media in civic and political engagement and has published in peer-reviewed journals, including *Communication Research, Journal of Communication*, *Human Communication Research*, *Political Communication*, *Political Research Quarterly*, *New Media and Society*, and *Asian Journal of Communication*. His recent studies analyze the impact of internet and mobile communication technologies on community involvement, deliberative openness, and political participation. He has received numerous top paper awards at major conferences. Kwak is a co-editor of a book series, Perspectives on Contemporary Korea, published by the University of Michigan Press.
+Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including *Communication Research*, *Journal of Communication*, *Human Communication Research*, *New Media and Society*, *Journal of Computer-Mediated Communication*, *Political Communication*, and *Political Research Quarterly*, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.
 
 contact: [njkwak@buffalo.edu](njkwak@buffalo.edu)
 
