--- a/people.Rmd
+++ b/people.Rmd
@@ -19,5 +19,11 @@ Yini Zhang (Ph.D., University of Wisconsin-Madison) is an assistant professor in
 
 contact: [yzhang20@buffalo.edu](yzhang20@buffalo.edu)
 
+## Zhiying Yue (research assistant)
+
+<img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid">
+
+Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She conducts research on social media use and its impact on psychological and physical well-being.
+
 ## New Members
 ...
