--- a/people.Rmd
+++ b/people.Rmd
@@ -23,7 +23,7 @@ contact: [yzhang20@buffalo.edu](yzhang20@buffalo.edu)
 
 <img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid">
 
-Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She conducts research on social media use and its impact on psychological and physical well-being.
+Zhiying Yue is a doctoral candidate in the Department of Communication at the University at Buffalo. She researches social media use and its impact on psychological and physical well-being.
 
 ## New Members
 ...
