--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "CEM Lab"
 ---
 
-The Communication and Emerging Media Lab (CEM Lab) is a collaborative research group that investigates the role of emerging communication technologies, such as Facebook, Twitter, YouTube, and TikTok, in the political discussion and engagement of the 21-century citizens. Based in the Department of Communication at the University at Buffalo, the CEM Lab is committed to facilitating faculty-student collaborative research.
+The Communication and Emerging Media Lab (CEM Lab) is a collaborative research group that investigates the role of emerging communication technologies, such as Facebook, Twitter, YouTube, and TikTok, in the political discussion and engagement of the 21-century citizens. Based in the [Department of Communication at the University at Buffalo](http://www.buffalo.edu/cas/communication.html) and the [Department of Communication at the University of Connecticut](https://comm.uconn.edu/), the CEM Lab is committed to facilitating faculty-student collaborative research.
 
 With emerging communication technologies intertwined with almost every aspect of social life, particularly our political life, we are interested in understanding how they shape people’s lived experiences. Particularly, we study how people use digital media to consume news and political information, learn about politics, discuss and share political content with others, and engage in the political process. Here, we see politics as relevant to almost all facets of our public and private lives, from voting, participation in social movements, to what we purchase and what lifestyle we adopt.   
 
