--- a/projects.Rmd
+++ b/projects.Rmd
@@ -18,6 +18,12 @@ This project seeks to map out an ecosystem of social media that features both di
 
 For research on social media discourses, the keywords used to retrieve related social data content can greatly influence the findings. This project examines existing keyword selection practices in social media data collection and proposes a word-graph based snowball sampling approach for keyword selection.
 
+### The politicization and polarization of the #MeToo movement
+
+<img src="files/metoo.jpeg" style="width:100%">
+
+This project examines the composition of participants in the #MeToo movement and the discourses originating from them over time on Twitter. We seek to find whether the politically motivated participants crowded out moderates and used this movement as weapons in partisan arguments. 
+
 ### The 2020 US presidential election study
 
 <img src="files/2020_election.jpeg" style="width:100%">
@@ -28,15 +34,11 @@ By conducting a two-wave panel study, we plan to examine how traditional and soc
 
 ### Accumulation of influence on social media
 
-<img src="files/grow-followers-760x400.png" style="width:100%">
-
 Though the use of social media by peripheral groups in society has received rising scholarly attention, it remains unclear how social media might contribute to their increased influence and how their social media activity evolves over time. In this project, we study actors’ strategic performance on social media, social media audience’s reaction, and news media amplification of their strategic performance, all of which might fuel each other to catapult peripheral actors to prominence. 
 
 Through an analysis of 242 QAnon Twitter accounts using topic modeling and time series modeling, we find that QAnon accounts performed their group identity that helped them attract social media audience reaction, which in turn reinforced their group identity-based performance and drove news media amplification. These results highlight the implications of social media and news media for the normalization of peripheral actors and ideologies.
 
 ### #MeToo cross-platform discourses
-
-<img src="files/activism.jpg" style="width:100%">
 
 This project situates our analysis in discourses on sexual violence and gender justice activism on Twitter, Facebook, Instagram, and Reddit. We propose a three-pronged framework to understand discourses surrounding social media activism initiated by networked counterpublics: personal expression that raises public consciousness and fosters social support, calls to action that demand social changes, and contention that can either invigorate or stymie action. We use supervised machine learning to classify three discourses (networked acknowledgement, calls to action, and feminism contention) and apply time series analysis to model their interrelations. 
 
