--- a/people.Rmd
+++ b/people.Rmd
@@ -21,7 +21,7 @@ Jiyoun Suk (Ph.D., University of Wisconsin-Madison) is an Assistant Professor in
 contact: [jiyoun.suk@uconn.edu](jiyoun.suk@uconn.edu)
 
 ## Nojin Kwak (co-director)
-<img src="files/Kwak.png" style="width:30%; border:5px solid">
+<img src="files/Kwak.jpeg" style="width:30%; border:5px solid">
 
 Nojin Kwak (Ph.D., University of Wisconsin-Madison) is a professor in the Department of Communication at the University at Buffalo (UB), State University of New York. In addition, he currently serves as Vice Provost for International Education at UB. Kwak’s research centers on the role of communication media in civic and political engagement, and his recent studies analyze the impact of social media on community involvement, deliberative openness, and political participation. Kwak’s work has been published in top journals in the field, including *Communication Research*, *Journal of Communication*, *Human Communication Research*, *New Media and Society*, *Journal of Computer-Mediated Communication*, *Political Communication*, and *Political Research Quarterly*, and he has received numerous top paper awards at major conferences. Previously, Kwak was a professor and chair of the Department of Communication and Media at the University of Michigan.
 
