--- a/people.Rmd
+++ b/people.Rmd
@@ -53,6 +53,6 @@ Dongdong Yang is an ABD in the Department of Communication at the University of 
 
 <img src="files/Zhiying_Yue.jpg" style="width:30%; border:5px solid">
 
-Zhiying Yue was a research assistant at the CEM lab. She researches social media use and its impact on psychological and physical well-being. She currently holds a post-doc position at the Harvard Medical School.
+Zhiying Yue was a research assistant in the CEM lab. She researches social media use and its impact on psychological and physical well-being. She currently holds a post-doc position at the Harvard Medical School.
 
 
