--- a/publications.Rmd
+++ b/publications.Rmd
@@ -5,9 +5,9 @@
 
 ## UNDER REVIEW
 
-Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. & Kwak, N. (under review) When the Personal Becomes Political: Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses across Four Social Media Platforms.
+Suk, J., Zhang, Y., Yue, Z., Wang, R., Dong, X., Yang, D., Lian, R. & Kwak, N. (R&R) When the Personal Becomes Political: Unpacking the Dynamics of Sexual Violence and Gender Justice Discourses across Four Social Media Platforms.
 
-Zhang, Y., Yue, Z., Yang, X., Chen, F. & Kwak, N. (under review) How a Peripheral Ideology Becomes Prominent: Strategic Performance, Audience Reaction, and Media Amplification in the Case of QAnon Twitter Accounts.
+Zhang, Y., Yue, Z., Yang, X., Chen, F. & Kwak, N. (R&R) How a Peripheral Ideology Becomes Prominent: Strategic Performance, Audience Reaction, and Media Amplification in the Case of QAnon Twitter Accounts.
 
 ## CONFERENCE PAPERS 
 Zhang, Y., Suk, J., Yue, Z., An, Z., Yang, D., Wang, R., Dong, X. & Joseph, K. (2022) Mapping out Information Flow in the Social Media Ecosystem by Tracing Hyperlinks. Paper accepted for presentation at the NCA 108th Annual Convention.
